# Medi_Agent

./: .gitignore  README.md  pyproject.toml
Backend/: .gitignore  main.py
Backend/Agents/: chat_bot _agent.py
Backend/api/v1/dependencies/: auth.py
Backend/api/v1/routes/: chat.py
Backend/api/v1/schema/chat/: request.py  response.py
Backend/config/v1/: constants.py
Backend/core/v1/agents/: chat_bot _agent.py  chat_bot_agent.py  dietitian_agent.py  ocr_agent.py  symptom_agent.py
Backend/core/v1/common/: exceptions.py  logger.py
Backend/core/v1/db/: init_db.py  session.py
Backend/core/v1/db_manager/postgresql/: chat_db_manager.py
Backend/core/v1/models/: base.py  chat.py  user.py
Backend/core/v1/types/: chat.py  utils.py
Backend/core/v1/utils/: env_config.py
Backend/services/v1/chat/: service.py
Frontend/: .gitignore  README.md  middleware.js  package-lock.json  package.json
Frontend/app/: globals.css  layout.js  page.js
Frontend/app/Chats/Slug/: layout.js  page.js
Frontend/app/Features/: page.js
Frontend/app/api/chat/: route.js
Frontend/app/pricing/: page.js
Frontend/components/: ChatForums.js  Navbar.js  menu-bar.js  theme-provider.js  theme-toggle.js
Frontend/components/chat-ui/: patient-sidebar.js
Frontend/components/kokonutui/: background-paths.js
Frontend/components/ui/: alert-dialog.jsx  dialog.jsx
Frontend/lib/: api-client.js  use-custom-chat.js
